workshop03/task1/dov-bear.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dov-deploy
  name: dov-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dov-pod
  template:
    metadata:
      labels:
        app: dov-pod
    spec:
      containers:
      - image: stackupiss/dov-bear:v2
        name: dov-bear
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dov-svc
  name: dov-svc
spec:
  selector:
    app: dov-pod
  type: ClusterIP
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
