workshop03/task1/dov-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  annotations: 
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-backend-svc
      port:
        number: 3000
  rules:
    - host: dov-157.230.194.142.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dov-svc
                port:
                  number: 3000
